--- a/index.html
+++ b/index.html
@@ -32,5 +32,25 @@
      </nav>
     </div>
    </header>
+
+
+   <div class="container">
+      <div class="secondary-logo">
+         <img src="./asset/images/logo-mastercraft.svg" alt="Mastercraft">
+      </div>
+
+      <div class="section-heading">
+        <h1>Mastercraft Bamboo Monitor Riser</h1>
+        <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+      </div>
+
+     <div class="buttons">
+       <button class="first-child">Back this project</button>
+       <button class="last-child">
+         <img src="./asset/images/icon-bookmark.svg" alt="Icon Bookmark"/>
+         Bookmark</button>
+     </div>
+
+   </div>
 </body>
 </html>
